# openagent

./: Cargo.toml  README.md
.github/workflows/: checks.yml  release.yml  rust.yml  staging.yml
examples/: batch.rs  chat.rs  embedding.rs  mcp.rs  playground.rs  response.rs
src/: agent.rs  api.rs  error.rs  http.rs  lib.rs  tool.rs  type.rs  util.rs
src/api/: batch.rs  chat.rs  embedding.rs  file.rs  response.rs  type.rs
src/api/response/: create.rs  event.rs  object.rs  type.rs
