[package]
authors     = ["Xavier Lau <x@acg.box>"]
description = "OpenAI Agent Kit"
edition     = "2024"
homepage    = "https://hack.ink/openagent"
license     = "GPL-3.0"
name        = "openagent"
readme      = "README.md"
repository  = "https://github.com/hack-ink/openagent"
resolver    = "3"
version     = "0.1.3"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[dev-dependencies]
# crates.io
dotenvy            = { version = "0.15" }
tokio              = { version = "1.45", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
# crates.io
futures      = { version = "0.3" }
paste        = { version = "1.0" }
pin-project  = { version = "1.1" }
regex        = { version = "1.11" }
reqwew       = { version = "0.7", features = ["json", "multipart", "stream"] }
rmcp         = { version = "0.1", git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["client", "reqwest", "transport-child-process", "transport-sse-client", "transport-streamable-http-client"] }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = { version = "1.0" }
thiserror    = { version = "2.0" }
tokio        = { version = "1.45" }
tokio-stream = { version = "0.1" }
tokio-util   = { version = "0.7" }
tracing      = { version = "0.1" }
