[package]
authors     = ["Xavier Lau <x@acg.box>"]
description = "OpenAI Agent Kit"
edition     = "2024"
homepage    = "https://hack.ink/openagent"
license     = "GPL-3.0"
name        = "openagent"
readme      = "README.md"
repository  = "https://github.com/hack-ink/openagent"
resolver    = "3"
version     = "0.1.8"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[dependencies]
# crates.io
futures     = { version = "0.3" }
paste       = { version = "1.0" }
pin-project = { version = "1.1" }
regex       = { version = "1.11" }
reqwest     = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "multipart", "rustls-tls", "stream"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }
thiserror   = { version = "2.0" }
tokio-util  = { version = "0.7" }
tracing     = { version = "0.1" }
# TODO.
# tokio-stream = { version = "0.1" }

[dev-dependencies]
# crates.io
dotenvy            = { version = "0.15" }
rmcp               = { version = "0.2", features = ["client", "reqwest", "transport-child-process", "transport-sse-client", "transport-streamable-http-client"] }
tokio              = { version = "1.46", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
